# python-polled-inotify

./: makefile  setup.cfg
src/: setup.cfg
src/notifier/: main.cpp
src/python/: x
tests/: __init__.py  pollinotify_test.py
tests/actions/: __init__.py  generator.py  listener.py
