[metadata]
name = pollinotify
version = 1.0
description = inotify wrapper providing polling with timeout for specified filesystem events
long_description = file: README.rst

author = Julian Porter
author_email = julian@jpembedded.solution
license = file: LICENSE.rst
keywords = 
	WAV
	MP3
	transcode
	LAME
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Environment :: No Input/Output (Daemon)
    Environment :: X11 Applications
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Python Software Foundation License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: System :: Filesystems
    Topic :: System :: Monitoring
    

[options]
zip_safe = True
include_package_data = True
packages = 
	pollinotify
